--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,42 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+absl-py==2.3.1
+astunparse==1.6.3
+certifi==2025.8.3
+charset-normalizer==3.4.3
 cloudpickle==3.1.1
 Farama-Notifications==0.0.4
-future @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+flatbuffers==25.2.10
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.74.0
+gym-notices==0.1.0
 gymnasium==1.1.1
+h5py==3.14.0
+idna==3.10
 importlib_metadata==8.7.0
-macholib @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+keras==3.10.0
+libclang==18.1.1
+Markdown==3.9
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.3
+namex==0.1.0
 numpy==2.0.2
 opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
 pillow==11.3.0
-six @ file:///AppleInternal/Library/BuildRoots/39d9dc1a-2111-11f0-be06-226177e5bb69/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+protobuf==6.32.0
+Pygments==2.19.2
+requests==2.32.5
+rich==14.1.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
 typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+wrapt==1.17.3
 zipp==3.23.0
