--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ astunparse==1.6.3
 certifi==2025.8.3
 charset-normalizer==3.4.3
 cloudpickle==3.1.1
+contourpy==1.3.0
+cycler==0.12.1
 Farama-Notifications==0.0.4
 flatbuffers==25.2.10
+fonttools==4.59.2
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.74.0
@@ -13,11 +16,15 @@ gymnasium==1.1.1
 h5py==3.14.0
 idna==3.10
 importlib_metadata==8.7.0
+importlib_resources==6.5.2
+joblib==1.5.2
 keras==3.10.0
+kiwisolver==1.4.7
 libclang==18.1.1
 Markdown==3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 mdurl==0.1.2
 ml_dtypes==0.5.3
 namex==0.1.0
@@ -29,12 +36,17 @@ packaging==25.0
 pillow==11.3.0
 protobuf==6.32.0
 Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 requests==2.32.5
 rich==14.1.0
+scikit-learn==1.6.1
+scipy==1.13.1
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
 termcolor==3.1.0
+threadpoolctl==3.6.0
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
